welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:2: error: missing parameter type
  if((a=>13 && a<=19)||(b=>13 && b<=19)){
      ^teenSum:2: error: value && is not a member of Int
  if((a=>13 && a<=19)||(b=>13 && b<=19)){
            ^teenSum:2: error: value && is not a member of Int
  if((a=>13 && a<=19)||(b=>13 && b<=19)){
                              ^